[package]
name = "bevy_crawler"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.2"
html5ever = "0.29.0"
roxmltree = "0.20.0"
serde = "1.0.215"
ureq = "2.10.1"
